fixed width issue producties on safari

--- a/src/css/base/pages/_producties.scss
+++ b/src/css/base/pages/_producties.scss
@@ -18,29 +18,30 @@
     margin-bottom: 3rem;
     & a {
       display: flex;
-    }
-    & .card {
-      position: relative;
-      overflow: hidden;
-      &__image {
-        display: block;
-        height: 100%;
+      & .card {
+        position: relative;
+        overflow: hidden;
         width: 100%;
-        object-fit: cover;
-      }
-      &__text {
-        position: absolute;
-        inset: 0;
-        transform: translateY(100%);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: rgba(0, 0, 0, 0.6);
-        font-size: 2.5rem;
-        transition: all 500ms;
-      }
-      &:hover .card__text {
-        transform: translateY(0);
+        &__image {
+          display: block;
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
+        }
+        &__text {
+          position: absolute;
+          inset: 0;
+          transform: translateY(100%);
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background-color: rgba(0, 0, 0, 0.6);
+          font-size: 2.5rem;
+          transition: all 500ms;
+        }
+        &:hover .card__text {
+          transform: translateY(0);
+        }
       }
     }
   }
